@@ -302,27 +302,6 @@ QString Utility::GetEnvironmentVar( const QString &variable_name )
 }
 
 
-// We need to remove the XML carriage returns ("&#xD" sequences)
-// that the default toString() method creates so we wrap it in this function
-QString Utility::GetQDomNodeAsString( const QDomNode &node )
-{
-    // This function used to be just this one line:
-    //
-    //    return document.toString().replace( "&#xd;", "" );
-    //
-    // But Qt has a bug with the toString() method if the XML
-    // encoding is specified as "us-ascii"... so we work around it.
-
-    QString document_text;
-    QTextStream stream( &document_text );
-    stream.setCodec( "UTF-8" );
-
-    node.save( stream, 1, QDomNode::EncodingFromTextStream );
-
-    return document_text.replace( "&#xd;", "" );   
-}
-
-
 // Accepts a string with HTML and returns the text
 // in that HTML fragment. For instance: 
 //   <h1>Hello <b>Qt</b> <![CDATA[<xml is cool>]]></h1>
